separate script files frontend

--- a/pages/main.html
+++ b/pages/main.html
@@ -49,25 +49,6 @@
         </a>
       </div>
     </div>
-    <script>
-      const urlParams = new URLSearchParams(window.location.search);
-      const code = urlParams.get("code");
-      const state = urlParams.get("state");
-      const token = sessionStorage.getItem("token");
-
-      async function initializePage() {
-        if (token) {
-          return;
-        }
-        fetch(`/main?code=${code}&state=${state}`).then((res) => {
-          res.json().then((data) => {
-            sessionStorage.setItem("token", data.response.token);
-            sessionStorage.setItem("avatar", data.response.profileImg);
-          });
-        });
-      }
-
-      document.addEventListener("DOMContentLoaded", initializePage);
-    </script>
+    <script src="/main.js"></script>
   </body>
 </html>
