--- a/pages/response.html
+++ b/pages/response.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grade My Playlist</title>
+    <title>Rate My Music</title>
     <link href="test.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
       <header>
+        <!-- make dynamic -->
         <h1>Grade My Playlist</h1>
         <div class="user-avatar"></div>
       </header>
@@ -18,16 +19,7 @@
             <img id="image" alt="playlist cover" />
           </div>
           <div class="rating-text">
-            Hac feugiat cubilia curae aliquam vehicula diam. Primis nec enim
-            commodo sapien sagittis fermentum magna. Fermentum vulputate velit
-            turpis pharetra cras euismod. Eget metus pharetra cursus pretium
-            duis venenatis. Senectus vel hendrerit felis, himenaeos mollis
-            finibus. Dignissim porttitor ridiculus ligula tellus ante morbi id
-            elementum primis. Dolor proin mi hendrerit ultricies in felis.
-            Feugiat cras odio tristique; rutrum taciti parturient quis hac.
-            Viverra auctor rhoncus metus; imperdiet diam dui taciti? Lacus
-            phasellus pellentesque tempor scelerisque vestibulum nascetur
-            tincidunt?
+            
           </div>
           <div id="star-container">
             <svg class="star" viewBox="0 0 24 24">
