Save state to swap computers

--- a/pages/response.html
+++ b/pages/response.html
@@ -18,9 +18,7 @@
           <div class="playlist-photo">
             <img id="image" alt="playlist cover" />
           </div>
-          <div class="rating-text">
-            
-          </div>
+          <div class="rating-text"></div>
           <div id="star-container">
             <svg class="star" viewBox="0 0 24 24">
               <path
@@ -51,7 +49,7 @@
         </div>
       </main>
       <footer>
-        <button id="gradeButton" disabled>Try again?</button>
+        <button id="gradeButton" onClick="onRetry()">Try again?</button>
       </footer>
     </div>
 
