--- a/pages/test.html
+++ b/pages/test.html
@@ -10,18 +10,16 @@
     <div class="container">
       <header>
         <!-- make dynamic -->
-        <h1>Grade My Playlist</h1>
+        <h1 id="header">Grade My Playlist</h1>
         <div class="user-avatar"></div>
       </header>
       <main>
         <div class="response">
-          <div class="playlist-photo">
+          <div id="photo" class="photo">
             <img id="image" alt="playlist cover" />
           </div>
-          <div class="rating-text">
-            
-          </div>
-          <div id="star-container">
+          <div class="text"></div>
+          <!-- <div id="star-container">
             <svg class="star" viewBox="0 0 24 24">
               <path
                 d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
@@ -47,7 +45,7 @@
                 d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
               />
             </svg>
-          </div>
+          </div> -->
         </div>
       </main>
       <footer>
@@ -55,6 +53,6 @@
       </footer>
     </div>
 
-    <script src="/response.js"></script>
+    <script src="/test.js"></script>
   </body>
 </html>
