--- a/pages/test.html
+++ b/pages/test.html
@@ -9,47 +9,27 @@
   <body>
     <div class="container">
       <header>
-        <!-- make dynamic -->
-        <h1 id="header">Grade My Playlist</h1>
-        <div class="user-avatar"></div>
+        <h1 id="header"></h1>
+        <div id="avatar"></div>
       </header>
       <main>
+        <!-- <div class="loading-container">
+          <p id="loading-prompt">
+            Sit back, relax, and let the music speak for itself. Your rating is
+            being calculated now.
+          </p>
+          <div class="progress-bar"></div>
+        </div> -->
         <div class="response">
-          <div id="photo" class="photo">
-            <img id="image" alt="playlist cover" />
-          </div>
-          <div class="text"></div>
-          <!-- <div id="star-container">
-            <svg class="star" viewBox="0 0 24 24">
-              <path
-                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-              />
-            </svg>
-            <svg class="star" viewBox="0 0 24 24">
-              <path
-                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-              />
-            </svg>
-            <svg class="star" viewBox="0 0 24 24">
-              <path
-                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-              />
-            </svg>
-            <svg class="star" viewBox="0 0 24 24">
-              <path
-                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-              />
-            </svg>
-            <svg class="star" viewBox="0 0 24 24">
-              <path
-                d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
-              />
-            </svg>
+          <!-- <div id="photo" class="photo">
+            <img id="image" />
           </div> -->
+          <!-- <p>this is some random test text hmm iw onder what will happen</p> -->
+          <!-- <div class="image-container">hello there</div> -->
         </div>
       </main>
       <footer>
-        <button id="gradeButton" disabled>Try again?</button>
+        <button id="try-again" onclick="onSubmit()" disabled>Try again?</button>
       </footer>
     </div>
 
