--- a/pages/main.html
+++ b/pages/main.html
@@ -11,7 +11,7 @@
       <h1>Spotify Analyzer</h1>
       <p>Choose an option to analyze your Spotify data:</p>
       <div class="button-container">
-        <a href="/roast" class="button button-green">
+        <a href="/roast" class="button button-green" onclick="onClick()">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
