Save, functionality seems to work properly. need error handling and layout changes

--- a/pages/test.html
+++ b/pages/test.html
@@ -54,7 +54,7 @@
           </div>
         </div>
       </main>
-      <footer>
+      <footer id="footer">
         <button id="try-again" onclick="onSubmit()" disabled>Try again?</button>
       </footer>
     </div>
