--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,7 @@
             them to millions of other users.
           </p>
           <div class="text"></div>
-          <a href="/authenticate" class="enter-link">
+          <a href="/spotify/authenticate" class="enter-link">
             <button class="enter-button">Enter</button>
           </a>
         </div>
