--- a/pages/response.html
+++ b/pages/response.html
@@ -14,7 +14,7 @@
       <header>
         <!-- change this, why would id header not be for header lol -->
         <h1 id="header"></h1>
-        <div id="avatar"></div>
+        <div id="avatar" class="avatar"></div>
       </header>
       <main>
         <div class="loading-container">
